fix: fix issue with incorrect transaction size and ttl (#292)
Co-authored-by: Mateusz Czeladka <mateusz.czeladka@cardanofoundation.org>