@@ -11,29 +11,22 @@ import org.mockito.Mock;
 import org.mockito.MockedStatic;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.openapitools.client.model.ConstructionPayloadsRequest;
-import org.openapitools.client.model.ConstructionPayloadsRequestMetadata;
-import org.openapitools.client.model.ConstructionPayloadsResponse;
-import org.openapitools.client.model.ProtocolParameters;
-import org.openapitools.client.model.SigningPayload;
+import org.openapitools.client.model.*;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
 import org.cardanofoundation.rosetta.common.exception.ApiException;
 import org.cardanofoundation.rosetta.common.model.cardano.transaction.UnsignedTransaction;
+import org.cardanofoundation.rosetta.common.services.ProtocolParamService;
+import org.cardanofoundation.rosetta.common.time.OfflineSlotService;
 import org.cardanofoundation.rosetta.common.util.CborEncodeUtil;
 import org.cardanofoundation.rosetta.common.util.RosettaConstants.RosettaErrorType;
 
 import static org.cardanofoundation.rosetta.EntityGenerator.givenConstructionPayloadsRequest;
 import static org.cardanofoundation.rosetta.EntityGenerator.givenSigningPayload;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
-import static org.mockito.ArgumentMatchers.anyList;
-import static org.mockito.ArgumentMatchers.anyString;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -44,20 +37,26 @@ class ConstructionApiServiceImplTest {
   @Mock
   private CardanoConstructionService cardanoConstructionService;
 
+  @Mock
+  private OfflineSlotService offlineSlotService;
+
+  @Mock
+  private ProtocolParamService protocolParamService;
+
   @InjectMocks
   private ConstructionApiServiceImpl underTest;
 
   @Test
   @SneakyThrows
   void constructionPayloadsService_thenReturnConstructionPayloadsResponse() {
-
     String expectedEncodedUnsignedTransaction = "encodedHash";
     SigningPayload expectedSigningPayload = givenSigningPayload();
     try (MockedStatic<CborEncodeUtil> mocked = Mockito.mockStatic(CborEncodeUtil.class)) {
       mocked.when(() -> CborEncodeUtil.encodeExtraData(anyString(), anyList(), anyString()))
           .thenReturn(expectedEncodedUnsignedTransaction);
-      when(cardanoConstructionService.createUnsignedTransaction(any(), anyList(), anyInt(), any()))
+      when(cardanoConstructionService.createUnsignedTransaction(any(), anyList(), anyLong(), anyLong()))
           .thenReturn(createUnsignedTransaction());
+
       when(cardanoConstructionService.constructPayloadsForTransactionBody(any(), any()))
           .thenReturn(Collections.singletonList(expectedSigningPayload));
 
@@ -66,7 +65,7 @@ class ConstructionApiServiceImplTest {
 
       assertEquals(expectedEncodedUnsignedTransaction, result.getUnsignedTransaction());
       assertFalse(result.getPayloads().isEmpty());
-      assertEquals(expectedSigningPayload, result.getPayloads().get(0));
+      assertEquals(expectedSigningPayload, result.getPayloads().getFirst());
     }
   }
 
@@ -171,8 +170,8 @@ class ConstructionApiServiceImplTest {
   @SneakyThrows
   void constructionPayloadsService_whenCannotCreateUnsignedTransaction_thenShouldThrowError() {
 
-    when(cardanoConstructionService.createUnsignedTransaction(any(), anyList(), anyInt(), any()))
-        .thenThrow(new IOException());
+    when(cardanoConstructionService.createUnsignedTransaction(any(), anyList(), anyLong(), anyLong()))
+            .thenThrow(new IOException());
 
     ApiException result = assertThrows(ApiException.class,
         () -> underTest.constructionPayloadsService(constructionPayloadsRequest));
@@ -191,8 +190,10 @@ class ConstructionApiServiceImplTest {
     try (MockedStatic<CborEncodeUtil> mocked = Mockito.mockStatic(CborEncodeUtil.class)) {
       mocked.when(() -> CborEncodeUtil.encodeExtraData(anyString(), anyList(), anyString()))
           .thenThrow(new CborException("CborException"));
-      when(cardanoConstructionService.createUnsignedTransaction(any(), anyList(), anyInt(), any()))
+
+      when(cardanoConstructionService.createUnsignedTransaction(any(), anyList(), anyLong(), anyLong()))
           .thenReturn(createUnsignedTransaction());
+
       when(cardanoConstructionService.constructPayloadsForTransactionBody(any(), any())).thenReturn(
           null);
 
@@ -210,4 +211,5 @@ class ConstructionApiServiceImplTest {
   private UnsignedTransaction createUnsignedTransaction() {
     return new UnsignedTransaction("hash", "bytes", Collections.singleton("address"), "metadata");
   }
+
 }
